@@ -90,12 +90,25 @@ a.social-link:hover {
 }
 
 
-/* ------------------ PANELS ------------------- */
+/* ------------------ CARDS ------------------- */
 
 .card {
 	box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.3);
   border-width:0px;
   margin-bottom:1.2em;
+}
+
+.card-header {
+	border-top-left-radius:3px;
+	border-top-right-radius:3px;
+  border-top:1px solid;
+  border-left:1px solid;
+  border-right:1px solid;
+	border-width:1px;
+  border-color:rgba(0,0,0,0.3);
+  font-size:1.1em;
+  box-shadow: inset 0px 2px 0px rgba(255, 255, 255, 0.1);
+	text-shadow: 0px 1px 1px rgba(0,0,0,0.3);
 }
 
 .card h1,.card h2,.card h3,.card h4,.card h5,.card h6,.card h7,.card h8,.card h9,.card h10  {
@@ -108,10 +121,12 @@ a.social-link:hover {
 }
 
 h1.card-title, h2.card-title, h3.card-title, h4.card-title, h5.card-title, h6.card-title, h7.card-title, h8.card-title, h9.card-title, h10.card-title  {
-  font-size:1.1em;
-  text-align:center;
+  font-size:1em;
   text-shadow: 0px -1px 0px rgba(0,0,0,0.3);
+  padding:0px;
   margin:0px;
+  color:#FFF;
+  font-weight:400;
 }
 
 /* meta */
