@@ -16,6 +16,8 @@
 
   - New components : social media links
 
+  - New style for card headers
+
 - New Palette based on a work by Tobias Bernard for the Fractal application
 
   - Color that aren't based on semantics
